tests/paczka1/small_fuzzy/86316852.err
Error in line 1: lQniF1bcuq S644 8,3
Error in line 5: rNfSVAq S644 48,6
Error in line 7: rNfSVAq S253 50,8
